update wedding to engagement

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=5" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <title>Tarun & Kirat - Wedding</title>
+  <title>Tarun & Kirat - Engagement</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Great+Vibes&family=Cormorant+Garamond:wght@300;400;500;600&display=swap" rel="stylesheet">
 
@@ -925,7 +925,7 @@
         <div class="invite-divider"></div>
         <div class="invite-message">
           request the honor of your presence<br>
-          at the wedding of
+          at the Engagement of
         </div>
       </div>
     </section>
