updated scroll section

--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
       overflow-x: hidden;
     }
 
-    html {
-      scroll-behavior: smooth;
-    }
+    html { scroll-behavior: smooth; }
 
     /* ==================== CURTAIN CONTAINER ==================== */
     .curtain-container {
@@ -122,18 +120,12 @@
 
     .curtain-right {
       transform: translateX(0);
-       transition: transform 1800ms cubic-bezier(0.22, 1, 0.36, 1);
-
+      transition: transform 1800ms cubic-bezier(0.22, 1, 0.36, 1);
       border-left: 1px solid rgba(255, 255, 255, 0.15);
     }
 
-    .curtain-container.open .curtain-left {
-      transform: translateX(-100%);
-    }
-
-    .curtain-container.open .curtain-right {
-      transform: translateX(100%);
-    }
+    .curtain-container.open .curtain-left { transform: translateX(-100%); }
+    .curtain-container.open .curtain-right { transform: translateX(100%); }
 
     .rope {
       position: absolute;
@@ -189,14 +181,36 @@
       scroll-snap-align: start;
     }
 
+    /* ==================== INVITE SECTION ==================== */
     #inviteSection {
       background: linear-gradient(135deg, #fafaf8 0%, #f5f5f3 100%);
+      position: relative;
+      overflow: hidden;
+    }
+
+    /* NEW: subtle bottom fade so it feels scrollable */
+    #inviteSection::after{
+      content:"";
+      position:absolute;
+      left:0;
+      right:0;
+      bottom:0;
+      height: 140px;
+      background: linear-gradient(to bottom,
+        rgba(245,245,243,0),
+        rgba(245,245,243,0.75),
+        rgba(245,245,243,1)
+      );
+      pointer-events:none;
+      z-index: 2;
     }
 
     .invite-content {
       text-align: center;
       max-width: 95vw;
       animation: fadeInScale 800ms cubic-bezier(0.34, 1.56, 0.64, 1) 700ms both;
+      z-index: 3;
+      position: relative;
     }
 
     @keyframes fadeInScale {
@@ -251,6 +265,7 @@
       left: 0;
       pointer-events: none;
       overflow: hidden;
+      z-index: 1;
     }
 
     .heart {
@@ -274,6 +289,61 @@
       100% { bottom: 100vh; opacity: 0; }
     }
 
+    /* ==================== NEW: SCROLL HINT ==================== */
+    .scroll-hint{
+      position: absolute;
+      left: 50%;
+      bottom: max(18px, env(safe-area-inset-bottom));
+      transform: translateX(-50%);
+      z-index: 4;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 8px;
+      cursor: pointer;
+      user-select: none;
+      -webkit-user-select: none;
+      padding: 10px 14px;
+      border-radius: 999px;
+      background: rgba(255,255,255,0.70);
+      border: 1px solid rgba(212,175,55,0.35);
+      backdrop-filter: blur(10px);
+      box-shadow: 0 10px 26px rgba(0,0,0,0.08);
+      transition: transform 220ms ease, box-shadow 220ms ease, background 220ms ease;
+    }
+
+    .scroll-hint:hover{
+      transform: translateX(-50%) translateY(-2px);
+      box-shadow: 0 14px 34px rgba(0,0,0,0.10);
+      background: rgba(255,255,255,0.80);
+    }
+
+    .scroll-hint-text{
+      font-family: 'Cormorant Garamond', serif;
+      font-weight: 700;
+      letter-spacing: 0.9px;
+      font-size: 12px;
+      color: rgba(58,58,58,0.78);
+      text-transform: uppercase;
+      line-height: 1;
+      display: flex;
+      gap: 8px;
+      align-items: center;
+    }
+
+    .scroll-chev{
+      font-size: 18px;
+      line-height: 1;
+      color: var(--accent);
+      animation: bounceDown 1.4s ease-in-out infinite;
+    }
+
+    @keyframes bounceDown{
+      0%, 100% { transform: translateY(0); opacity: 0.75; }
+      50% { transform: translateY(7px); opacity: 1; }
+    }
+
+    /* ==================== SCRATCH SECTION ==================== */
     #scratchSection {
       background: linear-gradient(135deg, #ffffff 0%, #f9f9f7 100%);
       flex-direction: column;
@@ -327,10 +397,7 @@
       margin: 20px 0;
     }
 
-    .romantic-message.show {
-      opacity: 1;
-      transform: translateY(0) scale(1);
-    }
+    .romantic-message.show { opacity: 1; transform: translateY(0) scale(1); }
 
     .romantic-sub {
       font-family: 'Cormorant Garamond', serif;
@@ -440,11 +507,7 @@
       animation: fadeInUp 0.8s ease-out 0.5s both;
     }
 
-    .circle-wrap {
-      text-align: center;
-      flex: 0 0 auto;
-      min-width: 0;
-    }
+    .circle-wrap { text-align: center; flex: 0 0 auto; min-width: 0; }
 
     .circle-card {
       width: clamp(90px, 20vw, 130px);
@@ -526,10 +589,7 @@
       font-weight: 700;
     }
 
-    .names.show {
-      opacity: 1;
-      transform: translateY(0);
-    }
+    .names.show { opacity: 1; transform: translateY(0); }
 
     /* ==================== PREMIUM VENUE SECTION UPGRADE ==================== */
     #venueSection { position: relative; overflow: hidden; }
@@ -755,7 +815,6 @@
 
     .sparkle{ color: rgba(212,175,55,0.95); margin: 0 6px; }
 
-    /* Ornaments */
     .venue-ornament{
       position:absolute;
       width: 260px;
@@ -776,7 +835,6 @@
       background: radial-gradient(circle at 30% 30%, rgba(139,21,56,0.9), rgba(139,21,56,0) 60%);
     }
 
-    /* Mobile: grid becomes 1-column */
     @media (max-width: 520px){
       .venue-info-grid{ grid-template-columns: 1fr; }
       .venue-address{ padding: 12px; }
@@ -793,6 +851,8 @@
       .section-title { font-size: clamp(16px, 4.5vw, 26px); }
       .venue-card { padding: 18px 14px; }
       .chip { padding: 7px 12px; font-size: 10px; }
+      .scroll-hint{ padding: 9px 12px; }
+      .scroll-hint-text{ font-size: 11px; }
     }
 
     @media (max-width: 360px) {
@@ -807,13 +867,14 @@
         animation-iteration-count: 1 !important;
         transition-duration: 0.01ms !important;
       }
+      .scroll-chev{ animation: none !important; }
     }
 
     /* ==================== NEW: OPEN CURTAINS BUTTON OVERLAY ==================== */
     .start-overlay{
       position: fixed;
       inset: 0;
-      z-index: 200; /* above curtains */
+      z-index: 200;
       display: grid;
       place-items: center;
       padding: 24px;
@@ -855,13 +916,6 @@
       margin-bottom: 16px;
     }
 
-    .start-hint{
-      margin-top: 10px;
-      font-family: 'Cormorant Garamond', serif;
-      color: rgba(58,58,58,0.68);
-      font-size: 13px;
-    }
-
     .start-btn{
       display: inline-flex;
       align-items: center;
@@ -887,16 +941,8 @@
       filter: brightness(1.02);
     }
 
-    .start-btn:active{
-      transform: translateY(0px);
-    }
+    .start-btn:active{ transform: translateY(0px); }
 
-    .start-icon{
-      font-size: 18px;
-      line-height: 1;
-    }
-
-    /* Prevent accidental scrolling before start */
     body.lock-scroll{
       overflow: hidden;
       height: 100%;
@@ -906,28 +952,21 @@
 </head>
 
 <body class="lock-scroll">
-  <!-- CONFETTI CONTAINER -->
   <div id="confetti-container"></div>
 
-  <!-- Audio: NOT autoplay (will start only on button click) -->
   <audio id="bgAudio" preload="auto" loop playsinline>
     <source src="audio.mp3" type="audio/mpeg" />
     <source src="audio.webm" type="audio/webm" />
   </audio>
 
-  <!-- NEW: Start Overlay with button -->
   <div class="start-overlay" id="startOverlay" aria-modal="true" role="dialog">
     <div class="start-card">
       <div class="start-title">Tarun <span style="color: var(--accent); margin: 0 8px;">❤️</span> Kirat</div>
       <div class="start-sub">Tap below to open the curtains & begin the celebration</div>
-      <button class="start-btn" id="openBtn" type="button">
-        <span class="start-icon">🎭</span>
-        Open the Curtains
-      </button>
+      <button class="start-btn" id="openBtn" type="button">🎭 Open the Curtains</button>
     </div>
   </div>
 
-  <!-- CURTAIN OVERLAY -->
   <div class="curtain-container" id="curtainContainer">
     <div class="curtain curtain-left">
       <div class="rope"></div>
@@ -939,14 +978,13 @@
     </div>
   </div>
 
-  <!-- CONTENT -->
   <div class="content-wrapper">
-    <!-- INVITE SECTION -->
     <section id="inviteSection">
       <div class="floating-hearts">
         <div class="heart">💕</div><div class="heart">💕</div><div class="heart">💕</div>
         <div class="heart">💕</div><div class="heart">💕</div><div class="heart">💕</div>
       </div>
+
       <div class="invite-content">
         <div class="bride-groom-names">Tarun <span style="color: var(--accent); margin: 0 8px;">❤️</span> Kirat</div>
         <div class="invite-subtitle">Together with their families</div>
@@ -956,9 +994,14 @@
           at the Engagement of
         </div>
       </div>
+
+      <!-- NEW: Scroll hint -->
+      <div class="scroll-hint" id="scrollHint" role="button" aria-label="Scroll down">
+        <div class="scroll-hint-text">Scroll down <span style="color: rgba(212,175,55,0.95)">✦</span> Reveal the date</div>
+        <div class="scroll-chev">⌄</div>
+      </div>
     </section>
 
-    <!-- SCRATCH SECTION -->
     <section id="scratchSection">
       <div class="stage">
         <div class="section-title">Scratch to reveal the date</div>
@@ -1015,7 +1058,6 @@
       </div>
     </section>
 
-    <!-- VENUE SECTION -->
     <section id="venueSection">
       <div class="venue-card premium">
         <div class="venue-top">
@@ -1030,17 +1072,14 @@
             <div class="info-label">Date</div>
             <div class="info-value">18 • 02 • 2026</div>
           </div>
-
           <div class="info-item">
             <div class="info-label">Time</div>
             <div class="info-value">8:00 PM</div>
           </div>
-
           <div class="info-item">
             <div class="info-label">Place</div>
             <div class="info-value">Nirvana Club</div>
           </div>
-
           <div class="info-item">
             <div class="info-label">City</div>
             <div class="info-value">Ludhiana</div>
@@ -1056,16 +1095,11 @@
         </div>
 
         <div class="venue-actions">
-          <a class="btn primary"
-             target="_blank"
-             rel="noopener"
+          <a class="btn primary" target="_blank" rel="noopener"
              href="https://www.google.com/maps/search/?api=1&query=Nirvana%20Club%20Ludhiana">
             Get Directions
           </a>
-
-          <a class="btn ghost" href="#scratchSection">
-            Back to Date
-          </a>
+          <a class="btn ghost" href="#scratchSection">Back to Date</a>
         </div>
 
         <div class="premium-chips">
@@ -1080,15 +1114,12 @@
         </div>
       </div>
 
-      <!-- subtle background ornaments -->
       <div class="venue-ornament o1"></div>
       <div class="venue-ornament o2"></div>
     </section>
   </div>
 
 <script>
-  const clamp = (v, a, b) => Math.max(a, Math.min(b, v));
-
   let curtainOpen = false;
   let celebrationTriggered = false;
 
@@ -1100,26 +1131,13 @@
   const bgAudio = document.getElementById("bgAudio");
   const startOverlay = document.getElementById("startOverlay");
   const openBtn = document.getElementById("openBtn");
-
-  // Helpful audio debug logs
-  if (bgAudio) {
-    bgAudio.addEventListener("error", () => {
-      console.log("❌ Audio error. File not loading / unsupported format.");
-      console.log(bgAudio.error);
-    });
-    bgAudio.addEventListener("canplay", () => console.log("✅ Audio can play"));
-    bgAudio.addEventListener("play", () => console.log("▶️ Audio started"));
-  }
+  const scrollHint = document.getElementById("scrollHint");
 
   async function playAudioOnGesture() {
     if (!bgAudio) return;
     bgAudio.volume = 0.6;
-    try {
-      await bgAudio.play(); // requires user gesture (button click)
-    } catch (e) {
-      // If it still fails (rare), user can tap again
-      console.log("⚠️ Audio play blocked:", e);
-    }
+    try { await bgAudio.play(); }
+    catch (e) { console.log("⚠️ Audio play blocked:", e); }
   }
 
   function openCurtains() {
@@ -1129,37 +1147,28 @@
   }
 
   function startExperience() {
-    // Remove scroll lock
     document.body.classList.remove("lock-scroll");
-
-    // Hide overlay
     startOverlay.classList.add("hide");
-
-    // Play audio + open curtains
     playAudioOnGesture();
     openCurtains();
   }
 
-  // Button is the ONLY trigger (per your request)
   openBtn.addEventListener("click", startExperience);
+
+  // NEW: scroll hint click -> scroll to scratch section
+  scrollHint.addEventListener("click", () => {
+    document.getElementById("scratchSection")?.scrollIntoView({ behavior: "smooth" });
+  });
 
   // ==================== CONFETTI ANIMATION ====================
   function createConfetti() {
     const colors = ['#d4af37', '#8b1538', '#c9a961', '#f4d65c', '#d4a5a5', '#e8dcc8'];
-
     for (let i = 0; i < 150; i++) {
       const confetti = document.createElement('div');
       confetti.className = 'confetti';
-
-      const randomColor = colors[Math.floor(Math.random() * colors.length)];
-      confetti.style.backgroundColor = randomColor;
-
-      const startX = Math.random() * window.innerWidth;
-      const startY = -20;
-
-      confetti.style.left = startX + 'px';
-      confetti.style.top = startY + 'px';
-
+      confetti.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+      confetti.style.left = (Math.random() * window.innerWidth) + 'px';
+      confetti.style.top = '-20px';
       confettiContainer.appendChild(confetti);
 
       const duration = Math.random() * 2 + 2.5;
@@ -1183,11 +1192,9 @@
   function triggerCelebration() {
     if (celebrationTriggered) return;
     celebrationTriggered = true;
-
     createConfetti();
-
-    if (romanticMessage) romanticMessage.classList.add("show");
-    if (namesEl) namesEl.classList.add("show");
+    romanticMessage?.classList.add("show");
+    namesEl?.classList.add("show");
   }
 
   // ==================== SCRATCH CARDS ====================
@@ -1218,7 +1225,6 @@
 
     const ctx = canvas.getContext("2d", { willReadFrequently: true });
 
-    // Draw scratch cover with elegant gold gradient
     const gradient = ctx.createLinearGradient(0, 0, width, height);
     gradient.addColorStop(0, "#d4a574");
     gradient.addColorStop(0.5, "#c9a961");
@@ -1227,7 +1233,6 @@
     ctx.fillStyle = gradient;
     ctx.fillRect(0, 0, width, height);
 
-    // Add subtle texture
     ctx.fillStyle = "rgba(255,255,255,0.1)";
     for (let i = 0; i < 8; i++) {
       ctx.beginPath();
@@ -1248,10 +1253,7 @@
     function getCoords(e) {
       const r = canvas.getBoundingClientRect();
       const touch = e.touches?.[0] || e;
-      return {
-        x: (touch.clientX - r.left) * dpr,
-        y: (touch.clientY - r.top) * dpr
-      };
+      return { x: (touch.clientX - r.left) * dpr, y: (touch.clientY - r.top) * dpr };
     }
 
     function scratch(x, y) {
@@ -1264,17 +1266,14 @@
     function calculateProgress() {
       const imageData = ctx.getImageData(0, 0, width, height);
       const data = imageData.data;
+      let cleared = 0, total = 0;
 
-      let cleared = 0;
-      let total = 0;
-
-      // sample for speed (increase step for faster, decrease for more accurate)
       const stride = 16;
-      const alphaThreshold = 64; // < 64 means mostly scratched
+      const alphaThreshold = 64;
 
       for (let y = 0; y < height; y += stride) {
         for (let x = 0; x < width; x += stride) {
-          const idx = (y * width + x) * 4 + 3; // alpha
+          const idx = (y * width + x) * 4 + 3;
           if (data[idx] < alphaThreshold) cleared++;
           total++;
         }
@@ -1283,12 +1282,10 @@
     }
 
     function checkProgress() {
-      const newProgress = calculateProgress();
-      card.progress = newProgress;
+      card.progress = calculateProgress();
       checkAllCirclesThreshold();
     }
 
-    // Mouse events
     canvas.addEventListener("mousedown", (e) => {
       isDrawing = true;
       const c = getCoords(e);
@@ -1304,10 +1301,7 @@
       const dy = c.y - lastY;
       const dist = Math.hypot(dx, dy);
       const steps = Math.ceil(dist / (10 * dpr));
-
-      for (let i = 0; i <= steps; i++) {
-        scratch(lastX + (dx * i) / steps, lastY + (dy * i) / steps);
-      }
+      for (let i = 0; i <= steps; i++) scratch(lastX + (dx * i) / steps, lastY + (dy * i) / steps);
       lastX = c.x; lastY = c.y;
       checkProgress();
     });
@@ -1315,7 +1309,6 @@
     canvas.addEventListener("mouseup", () => { isDrawing = false; });
     canvas.addEventListener("mouseleave", () => { isDrawing = false; });
 
-    // Touch events
     canvas.addEventListener("touchstart", (e) => {
       if (e.cancelable) e.preventDefault();
       isDrawing = true;
@@ -1328,16 +1321,12 @@
     canvas.addEventListener("touchmove", (e) => {
       if (e.cancelable) e.preventDefault();
       if (!isDrawing) return;
-
       const c = getCoords(e);
       const dx = c.x - lastX;
       const dy = c.y - lastY;
       const dist = Math.hypot(dx, dy);
       const steps = Math.ceil(dist / (10 * dpr));
-
-      for (let i = 0; i <= steps; i++) {
-        scratch(lastX + (dx * i) / steps, lastY + (dy * i) / steps);
-      }
+      for (let i = 0; i <= steps; i++) scratch(lastX + (dx * i) / steps, lastY + (dy * i) / steps);
       lastX = c.x; lastY = c.y;
       checkProgress();
     }, { passive: false });
@@ -1345,7 +1334,6 @@
     canvas.addEventListener("touchend", () => { isDrawing = false; });
     canvas.addEventListener("touchcancel", () => { isDrawing = false; });
 
-    // Pointer events (optional, but keeps parity with your original)
     if (window.PointerEvent) {
       canvas.addEventListener("pointerdown", (e) => {
         isDrawing = true;
@@ -1363,10 +1351,7 @@
         const dy = c.y - lastY;
         const dist = Math.hypot(dx, dy);
         const steps = Math.ceil(dist / (10 * dpr));
-
-        for (let i = 0; i <= steps; i++) {
-          scratch(lastX + (dx * i) / steps, lastY + (dy * i) / steps);
-        }
+        for (let i = 0; i <= steps; i++) scratch(lastX + (dx * i) / steps, lastY + (dy * i) / steps);
         lastX = c.x; lastY = c.y;
         checkProgress();
       });
@@ -1376,12 +1361,10 @@
     }
   }
 
-  // Initialize scratch cards (still on load)
   window.addEventListener("load", () => {
     scratchCards.forEach((card) => createScratchCard(card.canvasId, card));
   });
 
-  // Handle resize (rebuild canvases)
   let resizeTimeout;
   window.addEventListener("resize", () => {
     clearTimeout(resizeTimeout);
